# YaakoDrive

./: .dockerignore  .gitignore  Makefile  Makefile.common.mk  Makefile.dev.mk  compose.dev.yaml  compose.prod.yaml  compose.yaml  cookies.txt
.config/: .env.example  config.default.toml  config.dev.toml  config.prod.toml
.docs/: 01_overall_design.md  02_backend_design.md  03_frontend_design.md  04_api_design.md  05_db_design.md  06_operations_design.md
.memo/: NodeSharingメモ.md  api_memo.md  backend_development_guide.md  devlog.md  memo.md  refactoring_memo,.md  setup.md  todo.md  todo_soon.md
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-0152d82055b7ec692fe1727012acfde18cd78192c3867f0ba82aa01b14a651e6.json  query-0301e5a94581058cdfe350ca515a518fa76b405320ffb79a32c180e8a19c6710.json  query-12d9ec18e0e9bbe4793ac8f6bbd88fc5ee78760db406c7b925a50792444bf700.json  query-14431fffe47dad3a5d5161c3b9d41693d96a9a536e5d8b55dae15371feed2f3b.json  query-161fb82f8775a706ae8c54b1a71852b096d9e73335abf62bd8ba3303f8e5b2da.json  query-172249ba4f0ce333cbdb79b4245045187ec9e4c9afbeb610a4b12dabc4508f10.json  query-22da7d77bd5148b5d9341cba66525be35060e94371b81604bffa6e710869a4b8.json  query-29830b58d44d98999f7f86fe4c1a9cb3a4b26cf03a6c944747a95727495fe084.json  query-2d4859c36d921916fe56b3d3c2b1f8b0699d1a3b0dc96af2f4a95fdc1cc45288.json  query-3c52453299bd13df8ad7ea1a4fc427232c2ea6c4d87cd0e329cd24430fa58356.json  query-3eebf4e92b35f9ac90ca15f6acf6f5524366173788a4c201e0641bed097d869b.json  query-3f9c13c2ca234aadf3962b64c1bd26c9b31398466e452aa42408d9ce82eb6256.json  query-480a25b90c6a8fc687d01ba84a46e83c94fb0654e1a1c0c47d5aea4d8419bef1.json  query-48f74b49568169f32bff1e264914859eb3870a394bf40db33af89aaddd57eab1.json  query-4b81f84af7a7cfc0f95c2532c4bae04c5f31e692cd9e06a9852caa6181e85867.json  query-4c5e016aabe6077d8cd7b0ae50b61c74302a02a6b7ffa17647cfc7a2c61bddb8.json  query-4cbfbcd9bfbd05e4d5b6e1b7803c60736879463e0fa8ca9f3e0366f143b50f76.json  query-4f5ee053bb7d5884e90c274b22c494b53151027bd75a812a2d99f4379ddcf39e.json  query-5234d3d3464334b33bcaeb972a6889f487f08ced524578c256c6f87552a4bd3c.json  query-5289ae8c7fbe1e56fd7507d9cb269d01d898d381fe060ac92986dd84c0b0ef16.json  query-591a27b6ebf3efdbdd09833d91c18d68e84bd82d446b997490b1d5617eec8673.json  query-5e54d38fb0cb7892eff09300839674e0882c54d54defe327e0f33cd94470cd94.json  query-624eaf1c71fbd14dc6471e966ef51c0f5da17afddc31b152d1524d3b3402ad02.json  query-62b4b2cae25c92735e658124aa01aae9da6319214c13c1d49c4591735d241882.json  query-62ea825025cfbcab60cb03330b5495e8840a5e4f47a55be6bd323ed46a08d41d.json  query-637afbb0c64d91ea72ffd6737309318a38396710ab00bc06efbc56c3665d3507.json  query-6b2e0275dd0ef554be5f10150d07b27854c46121777e6ab106037a212c5360fe.json  query-72118c4a2ba48e8aadda5e2c5fe24d1eacb30d5c34ae0b951116e97ae41c6cef.json  query-737c93816a1a4283326163c7cad7022b717870df03f5fad2e226d8102264e5dd.json  query-7957ef11f9480f2cade946b1af4968cb814a2f5e5645e19d5075075ae1286195.json  query-7aafcb7a26e026a06c612f05605e9d591fb048b751ab675f98e1ee3485f7772b.json  query-7df11181628d6ab74bb9c2ecc7830880044a02c23d3c240057b54091fc27cf96.json  query-8c0081699bbd08af59f8854ca9948d56447bf5e7f6b2d2312fea18c2ef6992e1.json  query-8e1f834f8db5c95819d1fdac89e3e5971c195522c0f87d7b87893af463951eb3.json  query-8ed2ac52675b976f45473bce2c25903cbf20bbcec85452569b1c852abc63a14a.json  query-91da8c48e4e2a452a191711a97813314647560104398f0bd045d7377a43d08bf.json  query-92a4065eb6046cfc62a6b118178173085971aa3aefa3a6c867d5779c1db2deeb.json  query-955d071073a2497361f1094cbe75bb42d3193bee29cddb80598c6532d4a21c18.json  query-99285fd11cf8ebcc96c70886494fbb2c024e095a446901303cfeebd5a21081f4.json  query-9a71f1eb62dd79ba44b2ffcd3d3c13e8be448613ced78eb5a8e058b694de4d8c.json  (+30 more)
backend/crates/api/: Cargo.toml
backend/crates/api/src/: cookie.rs  download_token.rs  error.rs  lib.rs  response.rs  router.rs  state.rs
backend/crates/api/src/handlers/: auth.rs  common.rs  dashboard.rs  extractor.rs  file.rs  health.rs  mod.rs  node.rs  search.rs  trash.rs
backend/crates/app/: Cargo.toml
backend/crates/app/src/: error.rs  lib.rs
backend/crates/app/src/usecase/: mod.rs
backend/crates/app/src/usecase/admin/: create_admin.rs
backend/crates/app/src/usecase/auth/: get_me.rs  login.rs  logout.rs  mod.rs  refresh.rs
backend/crates/app/src/usecase/dashboard/: get_dashboard.rs  mod.rs
backend/crates/app/src/usecase/file/: download.rs  download_url.rs  mod.rs  upload.rs
backend/crates/app/src/usecase/node/: create_folder.rs  delete_node.rs  get_node.rs  list_children.rs  mod.rs  move_node.rs  rename_node.rs
backend/crates/app/src/usecase/search/: mod.rs  search_nodes.rs
backend/crates/app/src/usecase/trash/: hard_delete_node.rs  list_trash.rs  mod.rs  restore_node.rs
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: error.rs  jwt.rs  lib.rs  model.rs  password.rs  token.rs  validation.rs
backend/crates/cli/: Cargo.toml
backend/crates/cli/src/: error.rs  main.rs
backend/crates/cli/src/commands/: cleanup_expired_tokens.rs  create_admin.rs  migrate.rs  mod.rs
backend/crates/config/: Cargo.toml
backend/crates/config/src/: error.rs  lib.rs  loader.rs  models.rs
backend/crates/identity/: Cargo.toml
backend/crates/identity/src/: lib.rs  node_id.rs  refresh_token_id.rs  user_id.rs
backend/crates/infra/: Cargo.toml
backend/crates/infra/src/: error.rs  lib.rs
backend/crates/infra/src/postgres/: db.rs  file_content_repository.rs  mod.rs  node_repository.rs  node_row.rs  refresh_token_repository.rs  refresh_token_row.rs  unit_of_work.rs  user_repository.rs  user_row.rs
backend/crates/node/: Cargo.toml
backend/crates/node/src/: error.rs  lib.rs  model.rs  name.rs
backend/crates/repository/: Cargo.toml
backend/crates/repository/src/: error.rs  file_content_repository.rs  lib.rs  node_repository.rs  refresh_token_repository.rs  unit_of_work.rs  user_repository.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: error.rs  main.rs
backend/crates/storage/: Cargo.toml
backend/crates/storage/src/: error.rs  lib.rs  local.rs  service.rs
(+37 files in other folders)
