[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
# エラー型の定義用
thiserror = "2.0.17"
# ログ・構造化ロギング
tracing = "0.1"
# ログの出力・成形用
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Json用
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Webフレームワーク/高レイヤー通信
axum = "0.8"

# 非同期処理/低レイヤー通信
tokio = { version = "1", features = ["full"] }