[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
# エラー型の定義用
thiserror = "2.0.17"
# ログ・構造化ロギング
tracing = "0.1"
# ログの出力・成形用
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Json用
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Webフレームワーク/高レイヤー通信
axum = {version = "0.8", features = ["multipart"]}

# 非同期処理/低レイヤー通信
tokio = { version = "1", features = ["full"] }

# 非同期トレイト用
async-trait = "0.1"

# UUID用
uuid = { version = "1", features = ["v4", "serde"] }

# 時間型用
chrono = { version = "0.4", features = ["serde"] }

# sqlx
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }

# 16進数化用
hex = "0.4"

# メモリ上のバイト列を効率よく扱う用
# 大きなファイルなどのバッファ処理等
bytes       = "1"

# ファイル名や拡張子から適切なMINEタイプを推測する用
mime_guess  = "2"

# futureの追加コンテンツ
futures-util = "0.3"
