[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# workspace内の別クレート
app = { path = "../app" }
auth = { path = "../auth" }
config = { path = "../config" }
identity = { path = "../identity" }
repository = { path = "../repository" }
node = { path = "../node" }
storage = { path = "../storage" }

# workspace共通外部クレート
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures-util  = { workspace = true }

# 固有クレート
# Cookie取得用
axum-extra = { version = "0.10", features = ["cookie"] }

# Cookie関連で使う時間型
# 標準ライブラリやchronoは型が異なり使えない
time = "0.3"

# わからん
urlencoding  = "2"
